--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
               <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
-                  <meta name="description" content="A framework to serialize Java object instances as Java code"/>
+                  <meta name="description" content="Create Test Fixtures from Runnable Java Code"/>
   </head>
             <body>
                             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -39,7 +39,7 @@
                       <div class="jumbotron">
       <div class="container">
               <h1>Testrecorder</h1>
-          <p>A framework to serialize Java object instances as Java code</p>
+          <p>Create Test Fixtures from Runnable Java Code</p>
           <p>  <a href="download.html" class="btn btn-primary">
     Get Testrecorder
   </a>   <a href="https://github.com/almondtools/testrecorder" class="btn btn-default">
@@ -54,10 +54,15 @@
             
   </div>
           <div class="col-md-pull-4 col-md-8">
-                  <p>                  <strong>Testrecorder</strong> is a tool for generating test code from running productive code. The resulting test code can be used as part of 
-                integration tests or unit tests. Even without reusing the generated code it could give valuable insights for code understanding. </p>
+                  <p>                  <strong>Testrecorder</strong> is a tool for generating test code from runnable Java code. The generated tests can then be executed with a
+                JUnit-Runner. 
+                  <ul>
+                          <li>You can use these tests as part of your integration tests</li>
+                      <li>Or you can try to refactor them to make up proper unit tests</li>
+                      <li>Even without reusing the generated code it could give valuable insights for code understanding</li>
+  </ul> </p>
               <p>                It is not recommended to replace a test-driven strategy with generated-test strategy but in many cases the productive code is
-                there and the tests are missing (experts call this   <em>legacy code</em>). In this case the first step should be to fix the current behavior
+                there and the tests are missing (  <em>=legacy code</em>). In this case the first step should be to fix the current behavior
                 by creating integration tests. This task is often hard and thankless.   <strong>Testrecorder</strong> can support you in this case.</p>
   </div>
   </div>
