--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ExampleObject serializedObject1 = exampleObject1;</code></pre>
   </section>
               <section>
               <h2>Authors</h2>
-          <p>  <a href="https://github.com/almondtools">
+          <p>  <a href="http://www.amygdalum.net">
     Stefan Mandel
   </a></p>
   </section>
