--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
               <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
-                  <meta name="description" content="Create Test Fixtures from Runnable Java Code"/>
+                  <title>Testrecorder - Create Test Fixtures from Runnable Java Code</title>
+      <meta name="description" content="Create Test Fixtures from Runnable Java Code"/>
   </head>
             <body>
                             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
