--- a/download.html
+++ b/download.html
@@ -7,7 +7,7 @@
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
                   <title>Download Testrecorder</title>
-      <meta name="description" content="Create Test Fixtures from Runnable Java Code"/>
+      <meta name="description" content="Download Testrecorder"/>
   </head>
             <body>
                             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
