--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
               <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
-                  <title>Testrecorder - Create Test Fixtures from Runnable Java Code</title>
-      <meta name="description" content="Create Test Fixtures from Runnable Java Code"/>
+                  <title>Testrecorder - Generate Test Fixtures from Runnable Java Code</title>
+      <meta name="description" content="Record Test Fixtures from Runnable Java Code"/>
+      <meta name="keywords" content="testing,recorder,code generator,test generator,Java,integration test"/>
   </head>
             <body>
                             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -41,7 +42,7 @@
                       <div class="jumbotron">
       <div class="container">
               <h1>Testrecorder</h1>
-          <p>Create Test Fixtures from Runnable Java Code</p>
+          <p>Record Test Fixtures from Runnable Java Code</p>
           <p>  <a href="download.html" class="btn btn-primary">
     Get Testrecorder
   </a>   <a href="https://github.com/almondtools/testrecorder" class="btn btn-default">
