--- a/license.html
+++ b/license.html
@@ -7,7 +7,7 @@
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
                   <title>License - Testrecorder</title>
-      <meta name="description" content="Create Test Fixtures from Runnable Java Code"/>
+      <meta name="description" content="Licensing Testrecorder (GNU Lesser General Public License (Version 3))"/>
   </head>
             <body>
                             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
