--- a/index.html
+++ b/index.html
@@ -53,55 +53,7 @@
   </div>
               <div class="container">
                   <div class="row">
-              <div class="col-md-push-8 col-md-4">
-                      <div class="panel panel-default">
-              <div class="panel-heading">
-      <h4>Advanced Topics</h4>
-  </div>
-          <div class="panel-body">
-                                        <p>Following subjects could be of further interest:</p>
-<ul>
-  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/Architecture.md">An Introduction to the Testrecorder Architecture</a></li>
-  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/TuningOutput.md">Tuning the Output of Testrecorder</a></li>
-  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/RecordingIO.md">Recordering Input/Output with Testrecorder</a></li>
-  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/API.md">Using the Testrecorder-API to serialize data and generate code</a></li>
-  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/Extending.md">Extending Testrecorder with Custom Components</a></li>
-</ul>
-  </div>
-  </div>
-                  <div class="panel panel-default">
-              <div class="panel-heading">
-      <h4>Limitations</h4>
-  </div>
-          <div class="panel-body">
-                    <p>TestRecorder serialization (for values and tests) does not cover all of an objects properties. Problems might occur with:</p>
-<ul>
-  <li>static fields</li>
-  <li>synthetic fields (e.g. added by some bytecode rewriting framework)</li>
-  <li>native state</li>
-  <li>state that influences object access (e.g. modification counter in collections)</li>
-</ul>
-  </div>
-  </div>
-                  <div class="panel panel-default">
-              <div class="panel-heading">
-      <h4>Examples</h4>
-  </div>
-          <div class="panel-body">
-                    <p>Examples can be found at <a href="https://github.com/almondtools/testrecorder-examples">testrecorder-examples</a> </p>
-  </div>
-  </div>
-                  <div class="panel panel-default">
-              <div class="panel-heading">
-      <h4>Roadmap</h4>
-  </div>
-          <div class="panel-body">
-                    <p>The objective of Testrecorder is to provide an interface that is powerful, clean and extensible. To achieve this we will provide more and more configuration settings to extend the core framework. The fact that tests are generated automatically might rise wrong expectations: Testrecorder will probably always be an experts tool, meaning strong programming and debug skills are recommended to find the correct configuration and the necessary custom extensions.</p>
-<p>Testrecorder was not yet tested on a large set of code examples. Some classes are not as easy to serialize as others, so if you encounter problems, try to write an issue. Hopefully - most fixes to such problems should be solvable with custom serializers or custom deserializers. </p>
-  </div>
-  </div>
-  </div>
-          <div class="col-md-pull-4 col-md-8">
+              <div class="col-md-8">
                 <p><strong>Testrecorder</strong> is a tool for recording runtime behavior of java programs. The results of such a recording are executable JUnit-tests replaying the recorded behavior.</p>
 <ul>
   <li>You can use these tests as part of your characterization tests</li>
@@ -182,6 +134,54 @@ public void testFizzBuzz0() throws Exception {
 
 ...
 </code></pre>
+  </div>
+          <div class="col-md-4">
+                      <div class="panel panel-default">
+              <div class="panel-heading">
+      <h4>Advanced Topics</h4>
+  </div>
+          <div class="panel-body">
+                                        <p>Following subjects could be of further interest:</p>
+<ul>
+  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/Architecture.md">An Introduction to the Testrecorder Architecture</a></li>
+  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/TuningOutput.md">Tuning the Output of Testrecorder</a></li>
+  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/RecordingIO.md">Recordering Input/Output with Testrecorder</a></li>
+  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/API.md">Using the Testrecorder-API to serialize data and generate code</a></li>
+  <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/Extending.md">Extending Testrecorder with Custom Components</a></li>
+</ul>
+  </div>
+  </div>
+                  <div class="panel panel-default">
+              <div class="panel-heading">
+      <h4>Limitations</h4>
+  </div>
+          <div class="panel-body">
+                    <p>TestRecorder serialization (for values and tests) does not cover all of an objects properties. Problems might occur with:</p>
+<ul>
+  <li>static fields</li>
+  <li>synthetic fields (e.g. added by some bytecode rewriting framework)</li>
+  <li>native state</li>
+  <li>state that influences object access (e.g. modification counter in collections)</li>
+</ul>
+  </div>
+  </div>
+                  <div class="panel panel-default">
+              <div class="panel-heading">
+      <h4>Examples</h4>
+  </div>
+          <div class="panel-body">
+                    <p>Examples can be found at <a href="https://github.com/almondtools/testrecorder-examples">testrecorder-examples</a> </p>
+  </div>
+  </div>
+                  <div class="panel panel-default">
+              <div class="panel-heading">
+      <h4>Roadmap</h4>
+  </div>
+          <div class="panel-body">
+                    <p>The objective of Testrecorder is to provide an interface that is powerful, clean and extensible. To achieve this we will provide more and more configuration settings to extend the core framework. The fact that tests are generated automatically might rise wrong expectations: Testrecorder will probably always be an experts tool, meaning strong programming and debug skills are recommended to find the correct configuration and the necessary custom extensions.</p>
+<p>Testrecorder was not yet tested on a large set of code examples. Some classes are not as easy to serialize as others, so if you encounter problems, try to write an issue. Hopefully - most fixes to such problems should be solvable with custom serializers or custom deserializers. </p>
+  </div>
+  </div>
   </div>
   </div>
               <section>
