--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                   <title>Testrecorder - Generate Test Fixtures from Runnable Java Code</title>
       <meta name="description" content="Record Test Fixtures from Runnable Java Code"/>
       <meta name="keywords" content="testing,recorder,code generator,test generator,Java,characterization test"/>
+      <link rel="canonical" href="http://testrecorder.amygdalum.net"/>
   </head>
             <body>
                             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
