--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     }
 
     @Override
-    public List&lt;String&gt; getPackages() {
-        return asList(&quot;com.almondtools.testrecorder.examples&quot;);
+    public List&lt;Packages&gt; getPackages() {
+        return asList(Packages.byName(&quot;com.almondtools.testrecorder.examples&quot;));
     }
 
 }
