--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ public void testFizzBuzz0() throws Exception {
   <li>static fields</li>
   <li>synthetic fields (e.g. added by some bytecode rewriting framework)</li>
   <li>native state</li>
+  <li>proxies</li>
   <li>state that influences object access (e.g. modification counter in collections)</li>
 </ul>
   </div>
