--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
                   <title>Testrecorder - Generate Test Fixtures from Runnable Java Code</title>
       <meta name="description" content="Record Test Fixtures from Runnable Java Code"/>
-      <meta name="keywords" content="testing,recorder,code generator,test generator,Java,characterization test"/>
+      <meta name="keywords" content="testing,recorder,code generator,test generator,generate tests,Java,JUnit,unit test,characterization test"/>
       <link rel="canonical" href="http://testrecorder.amygdalum.net"/>
   </head>
             <body>
