--- a/download.html
+++ b/download.html
@@ -5,48 +5,46 @@
               <meta name="google-site-verification" content="zi2eDd9lPMxUKII5BagZe7uZLJdM-xwB3MYmn7At8m4"/>
               <meta name="google-site-verification" content="1tr9mxi3jNPA21quNokfjk011xmqU4KEYwxceZ4nPQg"/>
               <meta name="msvalidate.01" content="126AC9C6E2D2542FF635FD81D91FBF19"/>
-              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
                   <title>Download Testrecorder</title>
       <meta name="description" content="Download Testrecorder"/>
   </head>
             <body>
-                            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+                    <header>
+                              <nav class="navbar navbar-dark bg-dark navbar-expand-sm" role="navigation">
       <div class="container-fluid">
                   <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="navbar-toggler-icon"></span>
   </button>
           <a href="download.html" class="navbar-brand">
     Testrecorder
   </a>
   </div>
               <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-              <li >  <a href="index.html">
+      <ul class="navbar-nav">
+              <li class="nav-item">  <a class="nav-link" href="index.html">
     Home
   </a></li>
-          <li class="active">  <a href="download.html">
+          <li class="nav-item active">  <a class="nav-link" href="download.html">
     Get it!
   </a></li>
-          <li >  <a href="license.html">
+          <li class="nav-item">  <a class="nav-link" href="license.html">
     License
   </a></li>
   </ul>
   </div>
   </div>
   </nav>
-            
-              <div class="container">
-                  <div class="page-header">
-      <h1>Get Testrecorder</h1>
-  </div>
-      <section>
-      <p>Testrecorder is available from the Maven repository.</p>
+              
+  </header>
+              <main>
+      <div class="container">
+                  <section>
+             <h1>Get Testrecorder</h1>
+         <p>Testrecorder is available from the Maven repository.</p>
   </section>
               <section>
               <div class="alert alert-info" role="alert">
@@ -81,8 +79,9 @@
   </div>
   </section>
   </div>
+  </main>
               <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
               <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
               <script>hljs.initHighlightingOnLoad()</script>
   </body>
