--- a/license.html
+++ b/license.html
@@ -5,43 +5,43 @@
               <meta name="google-site-verification" content="zi2eDd9lPMxUKII5BagZe7uZLJdM-xwB3MYmn7At8m4"/>
               <meta name="google-site-verification" content="1tr9mxi3jNPA21quNokfjk011xmqU4KEYwxceZ4nPQg"/>
               <meta name="msvalidate.01" content="126AC9C6E2D2542FF635FD81D91FBF19"/>
-              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
                   <title>License - Testrecorder</title>
       <meta name="description" content="Licensing Testrecorder (GNU Lesser General Public License (Version 3))"/>
   </head>
             <body>
-                            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+                    <header>
+                              <nav class="navbar navbar-dark bg-dark navbar-expand-sm" role="navigation">
       <div class="container-fluid">
                   <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                  <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="navbar-toggler-icon"></span>
   </button>
           <a href="download.html" class="navbar-brand">
     Testrecorder
   </a>
   </div>
               <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-              <li >  <a href="index.html">
+      <ul class="navbar-nav">
+              <li class="nav-item">  <a class="nav-link" href="index.html">
     Home
   </a></li>
-          <li >  <a href="download.html">
+          <li class="nav-item">  <a class="nav-link" href="download.html">
     Get it!
   </a></li>
-          <li class="active">  <a href="license.html">
+          <li class="nav-item active">  <a class="nav-link" href="license.html">
     License
   </a></li>
   </ul>
   </div>
   </div>
   </nav>
-            
-              <div class="container">
+              
+  </header>
+              <main>
+      <div class="container">
                   <div class="page-header">
       <h1>License</h1>
   </div>
@@ -100,8 +100,9 @@
 <p>Each version is given a distinguishing version number. If the Library as you received it specifies that a certain numbered version of the GNU Lesser General Public License “or any later version” applies to it, you have the option of following the terms and conditions either of that published version or of any later version published by the Free Software Foundation. If the Library as you received it does not specify a version number of the GNU Lesser General Public License, you may choose any version of the GNU Lesser General Public License ever published by the Free Software Foundation.</p> 
 <p>If the Library as you received it specifies that a proxy can decide whether future versions of the GNU Lesser General Public License shall apply, that proxy's public statement of acceptance of any version is permanent authorization for you to choose that version for the Library.</p>
   </div>
+  </main>
               <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+              <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
               <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
               <script>hljs.initHighlightingOnLoad()</script>
   </body>
