--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
         <!DOCTYPE html>
-      <html>
+      <html lang="en">
                 <head>
                   <meta charset="utf-8"/>
               <meta name="google-site-verification" content="zi2eDd9lPMxUKII5BagZe7uZLJdM-xwB3MYmn7At8m4"/>
@@ -9,7 +9,7 @@
               <link rel="stylesheet" href="custom.css"/>
               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css"/>
                   <title>Testrecorder - Generate Test Fixtures from Runnable Java Code</title>
-      <meta name="description" content="Record Test Fixtures from Runnable Java Code"/>
+      <meta name="description" content="Testrecorder ist a unit test generator for Java. Testrecorder is based on capturing and replaying the states before and after method calls. The generated result is a pure Java JUnit test."/>
       <meta name="keywords" content="testing,recorder,code generator,test generator,generate tests,Java,JUnit,unit test,characterization test,capture,replay"/>
       <link rel="canonical" href="http://testrecorder.amygdalum.net"/>
   </head>
@@ -43,7 +43,7 @@
                         <div class="jumbotron">
       <div class="container">
               <h1>Testrecorder</h1>
-          <p>Record Test Fixtures from Runnable Java Code</p>
+          <p>Testrecorder ist a unit test generator for Java. Testrecorder is based on capturing and replaying the states before and after method calls. The generated result is a pure Java JUnit test.</p>
           <p>  <a href="download.html" class="btn btn-primary">
     Get Testrecorder
   </a>   <a href="https://github.com/almondtools/testrecorder" class="btn btn-light">
@@ -59,8 +59,8 @@
                   <div class="col-lg-8">
                     <p><strong>You have code</strong>, <strong>you have a running system</strong> - and <strong>you have no tests</strong>. This is where <strong>Testrecorder</strong> jumps in. The most relevant tests of a system are those, that resemble the workflow of the users of the system. <strong>Testrecorder</strong> records every user interaction a selected method is involved in and generates executable JUnit-Tests for this interaction.</p>
 <p><strong>testrecorder</strong> is as capture-replay test generator. In contrast to most other capture-replay test generators <strong>testrecorder</strong> does not generate gui/web integration tests but pure Java unit tests.</p>
-<h1>Basic Usage</h1>
-<h2>1. Annotate the method to record</h2>
+<h2>Basic Usage</h2>
+<h3>1. Annotate the method to record</h3>
 <p>Annotate the method to record with <code>@Recorded</code>. For example you want to record this simple example</p>
 <pre><code>package fizzbuzz;
 
@@ -79,18 +79,18 @@ public class FizzBuzz {
     }
 }
 </code></pre>
-<h2>2. Configure the test serialization</h2>
+<h3>2. Configure the test serialization</h3>
 <p>Create a directory <code>agentconfig</code> (either on your classpath or in the directory you run from). This directory should contain at least two files:</p>
 <ul>
-<li>
-<p><code>net.amygdalum.testrecorder.SerializationProfile</code> containing a single line:</p>
-<p>fizzbuzz.SerializationProfile</p>
-</li>
-<li>
-<p><code>net.amygdalum.testrecorder.SnapshotConsumer</code> containing a single line:</p>
-<p>fizzbuzz.TestGenerator</p>
-</li>
+<li><code>net.amygdalum.testrecorder.SerializationProfile</code> containing a single line:</li>
 </ul>
+<pre><code>    fizzbuzz.SerializationProfile
+</code></pre>
+<ul>
+<li><code>net.amygdalum.testrecorder.SnapshotConsumer</code> containing a single line:</li>
+</ul>
+<pre><code>    fizzbuzz.TestGenerator
+</code></pre>
 <p>These files refer two the configuration classes. A <code>SerializationProfile</code> configures which classes/methods/fields should be analyzed, included or excluded from recording. A <code>SnapshotConsumer</code> is notified if some recorded <code>ContextSnapshot</code> is available. Typically we want to generate Tests from the snapshot, so we plug in a configured instance of <code>ScheduledTestGenerator</code>.</p>
 <p>Now implement the two configuration classes:</p>
 <pre><code>package fizzbuzz;
@@ -122,11 +122,11 @@ public class TestGenerator extends ScheduledTestGenerator {
 <li>all tests will be generated to the directory <code>target/generated</code></li>
 <li>shutdown of the host program should trigger test generation</li>
 </ul>
-<h2>3. Run your program with TestRecorderAgent</h2>
-<p>To run your program with test recording activated you have to call ist with an agent</p>
+<h3>3. Run your program with TestRecorderAgent</h3>
+<p>To run your program with test recording activated you have to call it with an agent</p>
 <p><code>-javaagent:testrecorder-[version]-jar-with-dependencies.jar</code></p>
 <p><code>testrecorder-[version]-jar-with-dependencies.jar</code> is an artifact provided by the maven build (available in maven repository).</p>
-<h2>4. Interact with the program and check results</h2>
+<h3>4. Interact with the program and check results</h3>
 <p>You may now interact with your program and every call to a <code>@Recorded</code> method will be captured. After shutdown of your program all captured recordings will be transformed to executable JUnit tests, e.g.</p>
 <pre><code>@Test
 public void testFizzBuzz0() throws Exception {
