--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ public void testFizzBuzz0() throws Exception {
                                                 <p>Following subjects could be of further interest:</p>
 <ul>
 <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/Architecture.md">An Introduction to the Testrecorder Architecture</a></li>
-<li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/RecordingIO.md">Recording Input/Output with Testrecorder</a></li>
+<li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/RecordingIO.md">Recording Input/Output</a></li>
+<li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/RecordingEE.md">Recording Enterprise Java</a></li>
 <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/API.md">Using the Testrecorder-API to serialize data and generate code</a></li>
 <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/Extending.md">Extending Testrecorder with Custom Components</a></li>
 <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/TuningOutput.md">Tuning the Output of Testrecorder</a></li>
