--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ public class FizzBuzz {
 <h3>2. Configure the test serialization</h3>
 <p>Create a directory <code>agentconfig</code> (either on your classpath or in the directory you run from). This directory should contain at least two files:</p>
 <ul>
-<li><code>net.amygdalum.testrecorder.SerializationProfile</code> containing a single line:</li>
+<li><code>net.amygdalum.testrecorder.profile.SerializationProfile</code> containing a single line:</li>
 </ul>
 <pre><code>    fizzbuzz.SerializationProfile
 </code></pre>
