update to new version

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ public void testFizzBuzz0() throws Exception {
 <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/API.md">Using the Testrecorder-API to serialize data and generate code</a></li>
 <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/Extending.md">Extending Testrecorder with Custom Components</a></li>
 <li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/TuningOutput.md">Tuning the Output of Testrecorder</a></li>
+<li><a href="https://github.com/almondtools/testrecorder/blob/master/doc/CreatingCustomAgents.md">Creating a Custom Agent</a></li>
 </ul>
 
   </div>
